--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,3 +1,9 @@
 <resources>
     <dimen name="rounded_corner_box_radius">4dp</dimen>
+    <dimen name="cheer_meter_title_padding">5dp</dimen>
+    <dimen name="livelike_cheer_meter_corner_radius">8dp</dimen>
+    <dimen name="livelike_cheer_meter_padding">10dp</dimen>
+    <dimen name="livelike_cheer_meter_result_margin_top">40dp</dimen>
+    <dimen name="livelike_cheer_meter_score_text_size">25sp</dimen>
+    <dimen name="livelike_cheer_meter_text_padding">3dp</dimen>
 </resources>
