--- a/app/src/main/res/layout/widget_cheer_meter.xml
+++ b/app/src/main/res/layout/widget_cheer_meter.xml
@@ -10,7 +10,6 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-
         <LinearLayout
             android:id="@+id/lay_cheer_meter_header"
             android:layout_width="match_parent"
@@ -19,11 +18,6 @@
             android:gravity="center_vertical"
             android:orientation="horizontal"
             android:padding="@dimen/livelike_cheer_meter_padding">
-
-            <!--            <ImageView-->
-            <!--                android:layout_width="wrap_content"-->
-            <!--                android:layout_height="wrap_content"-->
-            <!--                app:srcCompat="@drawable/ic_cheer_meter_minigame" />-->
 
             <TextView
                 android:id="@+id/txt_cheer_meter_title"
@@ -36,19 +30,6 @@
                 android:textColor="@color/white"
                 android:textStyle="bold" />
 
-<!--            <FrameLayout-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content">-->
-
-<!--                <com.livelike.engagementsdk.widget.view.components.EggTimerCloseButtonView-->
-<!--                    android:id="@+id/textEggTimer"-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:layout_marginEnd="8dp"-->
-<!--                    android:layout_marginRight="8dp"-->
-<!--                    android:visibility="visible" />-->
-
-<!--            </FrameLayout>-->
         </LinearLayout>
 
         <FrameLayout
@@ -56,33 +37,6 @@
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:background="@drawable/cheer_meter_rounded_corner_black_background_bottom">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-<!--                <View-->
-<!--                    android:id="@+id/view_ripple"-->
-<!--                    android:layout_width="0dp"-->
-<!--                    android:layout_height="200dp"-->
-<!--                    android:layout_gravity="left"-->
-<!--                    android:layout_weight="1"-->
-<!--                    android:layout_marginRight="15dp"-->
-<!--                    android:background="@drawable/ripple_effect_team_1"-->
-<!--                    android:clickable="true"-->
-<!--                    android:focusable="true" />-->
-
-<!--                <View-->
-<!--                    android:id="@+id/view_ripple2"-->
-<!--                    android:layout_width="0dp"-->
-<!--                    android:layout_height="200dp"-->
-<!--                    android:layout_gravity="right"-->
-<!--                    android:layout_weight="1"-->
-<!--                    android:layout_marginLeft="15dp"-->
-<!--                    android:background="@drawable/ripple_effect_team_2"-->
-<!--                    android:clickable="true"-->
-<!--                    android:focusable="true" />-->
-            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -123,9 +77,7 @@
                     android:contentDescription="team two"
                     android:padding="13dp" />
 
-
             </LinearLayout>
-
 
             <LinearLayout
                 android:id="@+id/ll_cheer_meter_teams"
@@ -152,11 +104,10 @@
                     android:layout_weight="1"
                     android:background="@drawable/cheer_meter_team_2_background_gradient"
                     android:gravity="center"
-                    android:textColor="@color/black"
+                    android:textColor="@color/white"
                     android:padding="@dimen/livelike_cheer_meter_text_padding"
                     android:textAppearance="@style/TextAppearance.AppCompat.Subhead.Inverse" />
             </LinearLayout>
-
 
             <LinearLayout
                 android:id="@+id/ll_my_score"
@@ -180,26 +131,4 @@
         </FrameLayout>
 
     </LinearLayout>
-
-<!--    <FrameLayout-->
-<!--        android:id="@+id/fl_result_team"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_gravity="center"-->
-<!--        android:paddingTop="@dimen/livelike_cheer_meter_result_margin_top">-->
-
-<!--        <ImageView-->
-<!--            android:id="@+id/img_winner_team"-->
-<!--            android:layout_width="@dimen/livelike_cheer_meter_imageview_winner_team_width"-->
-<!--            android:layout_height="@dimen/livelike_cheer_meter_imageview_winner_team_height"-->
-<!--            android:layout_gravity="center"-->
-<!--            android:contentDescription="@string/winner" />-->
-
-<!--        <com.airbnb.lottie.LottieAnimationView-->
-<!--            android:id="@+id/img_winner_anim"-->
-<!--            android:layout_width="300dp"-->
-<!--            android:layout_height="200dp"-->
-<!--            android:layout_gravity="center" />-->
-<!--    </FrameLayout>-->
-
 </FrameLayout>
