--- a/app/src/main/res/layout/widget_cheer_meter.xml
+++ b/app/src/main/res/layout/widget_cheer_meter.xml
@@ -42,8 +42,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:animateLayoutChanges="true"
-                android:clickable="false"
-                android:descendantFocusability="blocksDescendants"
                 android:paddingLeft="@dimen/livelike_cheer_meter_padding"
                 android:paddingTop="35dp"
                 android:paddingRight="@dimen/livelike_cheer_meter_padding"
@@ -109,24 +107,24 @@
                     android:textAppearance="@style/TextAppearance.AppCompat.Subhead.Inverse" />
             </LinearLayout>
 
-            <LinearLayout
-                android:id="@+id/ll_my_score"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal|center_vertical"
-                android:layout_margin="15dp"
-                android:gravity="center"
-                android:orientation="vertical">
+<!--            <LinearLayout-->
+<!--                android:id="@+id/ll_my_score"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_gravity="center_horizontal|center_vertical"-->
+<!--                android:layout_margin="15dp"-->
+<!--                android:gravity="center"-->
+<!--                android:orientation="vertical">-->
 
-                <TextView
-                    android:id="@+id/txt_my_score"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/black"
-                    android:textSize="@dimen/livelike_cheer_meter_score_text_size"
-                    android:textStyle="bold"
-                    android:visibility="gone" />
-            </LinearLayout>
+<!--                <TextView-->
+<!--                    android:id="@+id/txt_my_score"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:textColor="@color/black"-->
+<!--                    android:textSize="@dimen/livelike_cheer_meter_score_text_size"-->
+<!--                    android:textStyle="bold"-->
+<!--                    android:visibility="gone" />-->
+<!--            </LinearLayout>-->
 
         </FrameLayout>
 
