load prev interaction

--- a/app/src/main/res/layout/poll_text_list_item.xml
+++ b/app/src/main/res/layout/poll_text_list_item.xml
@@ -37,6 +37,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        android:visibility="invisible"
         tools:text="30%" />
 
     <ProgressBar
@@ -50,5 +51,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        android:visibility="invisible"
         tools:progress="50" />
 </androidx.constraintlayout.widget.ConstraintLayout>
