--- a/app/src/main/res/layout/widget_cheer_meter.xml
+++ b/app/src/main/res/layout/widget_cheer_meter.xml
@@ -151,6 +151,7 @@
                     android:background="#333333"
                     android:gravity="center"
                     android:padding="@dimen/livelike_cheer_meter_text_padding"
+                    android:visibility="invisible"
                     android:textColor="@color/white"
                     android:textAppearance="@style/TextAppearance.AppCompat.Subhead.Inverse" />
 
@@ -163,6 +164,7 @@
                     android:gravity="center"
                     android:textColor="@color/white"
                     android:padding="@dimen/livelike_cheer_meter_text_padding"
+                    android:visibility="invisible"
                     android:textAppearance="@style/TextAppearance.AppCompat.Subhead.Inverse" />
             </LinearLayout>
         </FrameLayout>
