--- a/app/src/main/res/drawable/image_option_background_stroke_unselected.xml
+++ b/app/src/main/res/drawable/image_option_background_stroke_unselected.xml
@@ -5,7 +5,7 @@
     <corners android:radius="@dimen/rounded_corner_box_radius" />
 
     <solid
-        android:color="#1B1D1F" />
+        android:color="#000000" />
 
     <stroke
         android:width="1dp"
